# mental-poker-runtime

./: .gitmodules  ARCHITECTURE.txt  Cargo.toml  README.md
client/: .gitignore  index.html  package-lock.json  package.json
client/scripts/: papi-add.mjs
client/src/: App.tsx  accounts.ts  agent.ts  chain.ts  crypto.ts  game.ts  harness.ts  main.tsx  wallet.ts
client/src/components/: About.tsx  DrawPile.tsx  GameBoard.tsx  GameLog.tsx  GameSetup.tsx  PlayerHand.tsx  PlayerStatus.tsx
client/src/styles/: game.css
contracts/mental-poker/: Cargo.toml  Makefile
contracts/mental-poker/deploy/: .env.example  package.json
contracts/mental-poker/deploy/scripts/: client.ts  env.ts  gen-player2.ts  get-h160.ts  map-player2.ts  papi-add.ts  signer.ts  test-flow.ts
contracts/mental-poker/gen-test-flow/: Cargo.toml
contracts/mental-poker/gen-test-flow/src/: main.rs
contracts/mental-poker/linker/: Cargo.toml
contracts/mental-poker/linker/src/: main.rs
contracts/mental-poker/src/: main.rs
contracts/verify-spike/: .gitignore  Cargo.toml  Makefile  README.md  STATUS.md  VERIFY_SHUFFLE_COST.md  passet.metadata.scale
contracts/verify-spike/deploy/: .env.example  .gitignore  package-lock.json  package.json  tsconfig.json
contracts/verify-spike/deploy/scripts/: call.ts  deploy.ts  env.ts  gen-account.ts  verify-shuffle.ts  verify.ts
contracts/verify-spike/gen-hello/: Cargo.toml
contracts/verify-spike/gen-hello/src/: main.rs
contracts/verify-spike/gen-shuffle/: Cargo.toml
contracts/verify-spike/gen-shuffle/src/: main.rs
contracts/verify-spike/src/: main.rs
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  main.rs  rpc.rs  service.rs
pallets/mental-poker/: Cargo.toml
pallets/mental-poker/src/: lib.rs  types.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
