[package]
name = "mental-poker-node"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish = false
build = "build.rs"

[dependencies]
clap = { features = ["derive"], workspace = true }
docify = { workspace = true }
futures = { features = ["thread-pool"], workspace = true }
futures-timer = { workspace = true }
jsonrpsee = { features = ["server"], workspace = true }

mental-poker-runtime = { workspace = true }
polkadot-sdk = { workspace = true, features = ["experimental", "node"] }

[build-dependencies]
polkadot-sdk = { workspace = true, features = ["substrate-build-script-utils"] }

[features]
default = ["std"]
std = [
	"mental-poker-runtime/std",
	"polkadot-sdk/std",
]
