[package]
name = "gen-hello"
version = "0.1.0"
edition = "2021"
publish = false

# Standalone host workspace — generates a PlayerHello payload to feed
# into the deployed contract's verify_player test.
[workspace]

[[bin]]
name = "gen-hello"
path = "src/main.rs"

[dependencies]
cards-protocol = { path = "../../../../mental-poker/protocol" }
deck-secp256k1 = { path = "../../../../mental-poker/deck-secp256k1" }
ark-secp256k1 = "0.5.0"
ark-serialize = "0.5.0"
ark-std = "0.5.0"
rand = "0.8"
